fix for hiding horizontal overflow

--- a/shared/css/cyph.base.scss
+++ b/shared/css/cyph.base.scss
@@ -8,10 +8,6 @@
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004) !important;
 }
 
-#main {
-	overflow-x: hidden;
-}
-
 html, body, #main, md-sidenav {
 	background-color: #8b62d9 !important;
 }
